adding top changes

--- a/group-projects.html
+++ b/group-projects.html
@@ -79,43 +79,25 @@
 
 			<section class="page_topline ls ms section_padding_15 table_section">
 				<div class="container-fluid">
-					<div class="row">
-						<div class="col-sm-3 text-center text-md-left">
-							<div class="page_social_icons">
-								<a class="social-icon soc-facebook" href="#" title="Facebook"></a>
-								<a class="social-icon soc-twitter" href="#" title="Twitter"></a>
-								<a class="social-icon soc-google" href="#" title="Google"></a>
-							</div>
+				  <div class="row">
+					<div class="col-sm-9 text-center text-md-right">
+					  <div class="media small-teaser">
+						<div class="media-left">
+						  <i class="fa fa-phone highlight"></i>
 						</div>
-
-						<div class="col-sm-9 text-center text-md-right">
-
-
-							<div class="media small-teaser">
-								<div class="media-left">
-									<i class="fa fa-phone highlight"></i>
-								</div>
-								<div class="media-body">
-									8 800 259 2698
-								</div>
-							</div>
-
-
-							<div class="media small-teaser">
-								<div class="media-left">
-									<i class="fa fa-envelope highlight"></i>
-								</div>
-								<div class="media-body">
-									a-group@support.com
-
-								</div>
-							</div>
-
+						<div class="media-body">1 (780) 492-3905</div>
+					  </div>
+	  
+					  <div class="media small-teaser">
+						<div class="media-left">
+						  <i class="fa fa-envelope highlight"></i>
 						</div>
-
+						<div class="media-body">shuping2@ualberta.ca</div>
+					  </div>
 					</div>
+				  </div>
 				</div>
-			</section>
+			  </section>
 
 	
 			<header
