updating site with requested changes

--- a/knowledge_translation.html
+++ b/knowledge_translation.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/main.css" id="color-switcher-link" />
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
@@ -100,6 +101,8 @@
     <div id="canvas">
       <div id="box_wrapper">
         <!-- template sections -->
+
+
         <div id="header"></div>
 
         <section class="intro_section page_mainslider ds">
@@ -113,11 +116,11 @@
                       <div class="slide_description_wrapper slide_text_top">
                         <div class="slide_description">
                           <div class="intro-layer" data-animation="fadeInLeft">
-                            <h3>PINE Labs</h3>
+                            <h3>Currently Under Construction</h3>
                           </div>
                           <div class="intro-layer" data-animation="fadeInLeft">
                             <p class="grey big">
-                              Participation, INclusion, and Education
+                              Sorry for the inconvenience
                             </p>
                           </div>
                         </div>
@@ -135,66 +138,7 @@
           </div>
           <!-- eof flexslider -->
         </section>
-
-        <section
-          id="about"
-          class="ls ms parallax about_section section_padding_top_130 section_padding_bottom_100"
-        >
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 text-center">
-                <h2 class="section_header">About Us</h2>
-              </div>
-            </div>
-            <div class="row columns_padding_25 columns_margin_bottom_60">
-              <div class="col-sm-12">
-                <p class="fontsize_20 grey">
-                  The PINE Lab (Participation, Inclusion, and Education Lab) is
-                  a dynamic and forward-thinking research environment dedicated
-                  to exploring and enhancing the intersections of participation,
-                  inclusion, and education. This lab focuses on developing and
-                  implementing innovative strategies and methodologies to
-                  promote inclusive education and participation for marginalized
-                  populations in various settings. The key areas of research and
-                  practice in the PINE Lab include:
-				  </p>
-				 <ul>
-					<li class="fontsize_20 grey">
-					
-							<strong>Participation:</strong> Investigating how to foster active and meaningful participation in
-						educational, social, and professional contexts, especially for
-						those who are traditionally marginalized or underrepresented.</li>
-					<li class="fontsize_20 grey"> 
-						<strong>Inclusion:</strong> Developing and evaluating approaches to create more
-						inclusive environments, both in educational settings and the
-						broader community. This involves understanding and addressing
-						barriers to inclusion, such as social, physical, or
-						policy-related obstacles.</li>
-					<li class="fontsize_20 grey">
-						<strong>Education:</strong> Examining and advancing
-						educational practices and evaluation that support diverse
-						learning needs and promote equity in education. This includes
-						exploring pedagogies, curricula, and assessment methods that
-						accommodate a wide range of learners.</li>
-					<li class="fontsize_20 grey">
-						<strong>Collaboration and Community Engagement:</strong> Engaging with communities, educators,
-						policymakers, and other stakeholders to translate research
-						findings into practical, real-world applications and policies.</li>
-				 </ul>  
-				 
-                  <p class="fontsize_20 grey">The PINE Lab is characterized by its interdisciplinary
-                  approach, drawing on expertise from occupational therapy,
-                  education, psychology, rehabilitation, and other fields to
-                  comprehensively address the challenges and opportunities at
-                  the nexus of participation, inclusion, and education. It is a
-                  hub for scholars, practitioners, and students committed to
-                  making a positive impact in society through research,
-                  collaboration, and innovation.</p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <div id="footer"></div>
+<div id="footer"></div>
       </div>
       <!-- eof #box_wrapper -->
     </div>
