--- a/members/amir_shamsi_ardekani.html
+++ b/members/amir_shamsi_ardekani.html
@@ -17,10 +17,10 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/animations.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/main.css" id="color-switcher-link" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/fonts.css" />
+    <link rel="stylesheet" href="/css/main.css" id="color-switcher-link" />
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -110,7 +110,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <h2>Tom Partyson</h2>
+                <h2>Amir Shamsi Ardekani</h2>
               </div>
             </div>
           </div>
@@ -121,9 +121,9 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="images/team/01.jpg" alt="" class="round" />
-                  <h2 class="bottommargin_0">Tom Partyson</h2>
-                  <p class="small-text">Head of Partying</p>
+                  <img src="/images/team/Amir Shamsi Ardekani.jpg" alt="" class="round" />
+                  <h2 class="bottommargin_0">Amir Shamsi Ardekani</h2>
+                  <p class="small-text">Masters Student</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
@@ -137,7 +137,7 @@
                       </div>
                       <div class="media-body">
                         <h4 class="media-heading">Email:</h4>
-                        info@mywebsite.com
+                        shamsiar@ualberta.ca
                       </div>
                     </div>
                   </li>
@@ -162,41 +162,23 @@
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
                     <p>
-                      Ut wisi enim ad minim veniaquis nostrud exetation
-                      ullamcorper suscipit lobortis nisl ut aliquip ex ea
-                      commodo consequat. Dutem vel eum iriure dolor in hendrerit
-                      in vulputate velit esse molestie consequat, vel illum
-                      dolore eu feugiat nulla facilisis at vero eros et accumsan
-                      et iusto odio dignissim qui blandit.
+                      My true passion lies in rehabilitation research and education. Having graduated with a Bachelor of
+Science in Physiotherapy from the Tehran University of Medical Sciences (2020), I have explored various
+research topics in rehab, including cognition, pediatrics, sports, treatment methods, and education.
+Working as a team physiotherapist for a professional soccer team provided me with invaluable clinical
+experience that informs my research and teaching approach. Under Dr. Roberts supervision, I aim to
+conduct world-class research in rehabilitation education.
                     </p>
-                    <h3>Professional Life:</h3>
+                    <h3 class="topmargin_0">Master's Thesis:</h3>
                     <p>
-                      Dutem vel eum iriure dolor in hendrerit in vulputate velit
-                      esse molestie consequat, vel illum dolore eu feugiat nulla
-                      facilisis at vero eros et accumsan et iusto odio dignissim
-                      qui blandit. Praesent luptatum zzril delenit augue duis
-                      dolore te feugait nulla facilisi.
+                      To be added...
                     </p>
                   </div>
 
                   <div class="tab-pane fade in inactive" id="tab2">
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
-                      <li>
-                        <a href="services.html">paper 1</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 2</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 3</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 4</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 5</a>
-                      </li>
+                      <li>To be added...</li>
                     </ul>
                   </div>
                 </div>
@@ -214,7 +196,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/compressed.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
