--- a/members/hsin-hsiu_essential_yeh.html
+++ b/members/hsin-hsiu_essential_yeh.html
@@ -17,10 +17,10 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/animations.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/main.css" id="color-switcher-link" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/fonts.css" />
+    <link rel="stylesheet" href="/css/main.css" id="color-switcher-link" />
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -110,7 +110,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <h2>Tom Partyson</h2>
+                <h2>Hsin-Hsiu Essential Yeh</h2>
               </div>
             </div>
           </div>
@@ -121,9 +121,9 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="images/team/01.jpg" alt="" class="round" />
-                  <h2 class="bottommargin_0">Tom Partyson</h2>
-                  <p class="small-text">Head of Partying</p>
+                  <img src="/images/team/Hsin-Hsiu-Yeh.jpg" alt="" class="round" />
+                  <h2 class="bottommargin_0">Hsin-Hsiu Essential Yeh</h2>
+                  <p class="small-text">PH.D. Candidate</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
@@ -137,7 +137,7 @@
                       </div>
                       <div class="media-body">
                         <h4 class="media-heading">Email:</h4>
-                        info@mywebsite.com
+                        hsinhsiu@ualberta.ca
                       </div>
                     </div>
                   </li>
@@ -162,20 +162,25 @@
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
                     <p>
-                      Ut wisi enim ad minim veniaquis nostrud exetation
-                      ullamcorper suscipit lobortis nisl ut aliquip ex ea
-                      commodo consequat. Dutem vel eum iriure dolor in hendrerit
-                      in vulputate velit esse molestie consequat, vel illum
-                      dolore eu feugiat nulla facilisis at vero eros et accumsan
-                      et iusto odio dignissim qui blandit.
+                      Hsin-Hsiu Essentia Yeh is a dedicated occupational therapist and researcher with
+                      extensive expertise in rehabilitation medicine. Currently pursuing a PhD at the
+                      University of Alberta, she focuses on culturally appropriate palliative care and
+                      occupational therapy interventions. Essential’s career spans over a decade of clinical
+                      practice at leading institutions in Taiwan, complemented by research on mental health,
+                      palliative care, and the Kawa model’s application in diverse contexts. Her work has
+                      been recognized with prestigious awards, including the Alberta Graduate Excellence
+                      Student Scholarship and the J. Gordin Kaplan Graduate Student Award. She has
+                      presented at international conferences and contributed to peer-reviewed journals,
+                      advancing knowledge in occupation-based therapy and its cultural relevance. A
+                      passionate educator, Essential has trained students and professionals worldwide,
+                      promoting evidence-based practice and innovative teaching methods in occupational
+                      therapy. Her commitment to integrating cultural understanding into therapy makes her a
+                      pioneer in her field.
                     </p>
-                    <h3>Professional Life:</h3>
+                    <h3 class="topmargin_0">Ph. D. Thesis:</h3>
                     <p>
-                      Dutem vel eum iriure dolor in hendrerit in vulputate velit
-                      esse molestie consequat, vel illum dolore eu feugiat nulla
-                      facilisis at vero eros et accumsan et iusto odio dignissim
-                      qui blandit. Praesent luptatum zzril delenit augue duis
-                      dolore te feugait nulla facilisi.
+                      Delivering Culturally Appropriate Palliative Care to Chinese Immigrants in
+Alberta: Insights from Healthcare Providers in a Qualitative Case Study
                     </p>
                   </div>
 
@@ -183,19 +188,25 @@
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="services.html">paper 1</a>
+                        <a href="">Higher Rumination Tendency Is Associated with Reduced Positive
+                          Effects of Daily Activity Participation in People with Depressive Disorder.</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 2</a>
+                        <a href="">A model for occupation-based
+                          palliative care. Occupational Therapy in Health Care.</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 3</a>
+                        <a href="">Mediation Effects of Daily Activity Participation between Rumination and
+                          Subjective Quality of Life in Persons with Depression.</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 4</a>
+                        <a href="">Validation of the Ruminative Response Scale-Chinese Version (RRS-C)
+                          for Persons with Depression in Taiwan.</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 5</a>
+                        <a href="">Teaching evidence-based practice to
+                          occupational therapy students during psychiatry fieldwork: a curriculum at a
+                          University hospital in Taiwan.</a>
                       </li>
                     </ul>
                   </div>
@@ -214,7 +225,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/compressed.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
