--- a/members/john_hu.html
+++ b/members/john_hu.html
@@ -17,10 +17,10 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/animations.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/main.css" id="color-switcher-link" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/fonts.css" />
+    <link rel="stylesheet" href="/css/main.css" id="color-switcher-link" />
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -110,7 +110,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <h2>Tom Partyson</h2>
+                <h2>John Hu</h2>
               </div>
             </div>
           </div>
@@ -121,9 +121,9 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="images/team/01.jpg" alt="" class="round" />
-                  <h2 class="bottommargin_0">Tom Partyson</h2>
-                  <p class="small-text">Head of Partying</p>
+                  <img src="/images/team/05.jpg" alt="" class="round" />
+                  <h2 class="bottommargin_0">John Hu</h2>
+                  <p class="small-text">PH.D. Candidate</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
@@ -137,7 +137,7 @@
                       </div>
                       <div class="media-body">
                         <h4 class="media-heading">Email:</h4>
-                        info@mywebsite.com
+                        chiahao@ualberta.ca
                       </div>
                     </div>
                   </li>
@@ -162,20 +162,12 @@
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
                     <p>
-                      Ut wisi enim ad minim veniaquis nostrud exetation
-                      ullamcorper suscipit lobortis nisl ut aliquip ex ea
-                      commodo consequat. Dutem vel eum iriure dolor in hendrerit
-                      in vulputate velit esse molestie consequat, vel illum
-                      dolore eu feugiat nulla facilisis at vero eros et accumsan
-                      et iusto odio dignissim qui blandit.
+                    To be added...
                     </p>
-                    <h3>Professional Life:</h3>
+                    <h3 class="topmargin_0">Ph. D. Thesis:</h3>
                     <p>
-                      Dutem vel eum iriure dolor in hendrerit in vulputate velit
-                      esse molestie consequat, vel illum dolore eu feugiat nulla
-                      facilisis at vero eros et accumsan et iusto odio dignissim
-                      qui blandit. Praesent luptatum zzril delenit augue duis
-                      dolore te feugait nulla facilisi.
+                      Inclusive knowledge translation through digital media: Exploring impacts on
+                      health and equity
                     </p>
                   </div>
 
@@ -183,19 +175,20 @@
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="services.html">paper 1</a>
+                        <a href="">Access to health knowledge for health equality: a multi-phase review focused on
+                          disability-health.</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 2</a>
+                        <a href="">Participatory Action Research:
+                          performative critical consciousness as social ritual.</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 3</a>
+                        <a href="">Digital Humanities as Inclusive Knowledge Translation: A Multi-Phase Qualitative
+                          Pilot Study.</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 4</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 5</a>
+                        <a href="">Inequalities in travel time, cost, risk as cause of persistent social and health
+                          inequalities.</a>
                       </li>
                     </ul>
                   </div>
@@ -214,7 +207,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/compressed.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
