--- a/members/selina_fan.html
+++ b/members/selina_fan.html
@@ -17,10 +17,10 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/animations.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/main.css" id="color-switcher-link" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/fonts.css" />
+    <link rel="stylesheet" href="/css/main.css" id="color-switcher-link" />
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -110,7 +110,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <h2>Tom Partyson</h2>
+                <h2>Selina Fan</h2>
               </div>
             </div>
           </div>
@@ -121,9 +121,9 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="images/team/01.jpg" alt="" class="round" />
-                  <h2 class="bottommargin_0">Tom Partyson</h2>
-                  <p class="small-text">Head of Partying</p>
+                  <img src="/images/team/Selina-Fan-3.jpg" alt="" class="round" />
+                  <h2 class="bottommargin_0">Selina Fan</h2>
+                  <p class="small-text">PH.D. Candidate</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
@@ -137,7 +137,7 @@
                       </div>
                       <div class="media-body">
                         <h4 class="media-heading">Email:</h4>
-                        info@mywebsite.com
+                        sjfan@ualberta.ca
                       </div>
                     </div>
                   </li>
@@ -162,20 +162,34 @@
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
                     <p>
-                      Ut wisi enim ad minim veniaquis nostrud exetation
-                      ullamcorper suscipit lobortis nisl ut aliquip ex ea
-                      commodo consequat. Dutem vel eum iriure dolor in hendrerit
-                      in vulputate velit esse molestie consequat, vel illum
-                      dolore eu feugiat nulla facilisis at vero eros et accumsan
-                      et iusto odio dignissim qui blandit.
+                      Selina Fan is a Ph.D. candidate in Rehabilitation Science at the University of Alberta
+and a practicing occupational therapist. Her research interest lies in developing mental
+health practices that are culturally safe, strength-based, and recovery-oriented. As an
+occupational therapist, Selina is dedicated to improving the quality of mental health care
+for Chinese Canadians and other ethnic and cultural minorities in Canada. Her work
+seeks to address inequalities and biases in Canadian mental health research while
+promoting the wellness of marginalized populations.
+Her doctoral research, Unsettling Co-Creation with Chinese Immigrants: A Post-
+Qualitative Inquiry on Mental Health and Wellness, focuses on reducing health
+inequities through empowerment and health promotion. Drawing on a traditional cultural
+awareness approach, she explores strategies to improve cultural and social
+determinants of mental health for diverse communities.
+Selina&#39;s journey began during her undergraduate studies at the University of Calgary,
+where she developed foundational research skills. Later, her master&#39;s work at the
+University of Alberta focused on the experiences of Chinese-Canadian parents raising
+children with Autism Spectrum Disorder, sparking her commitment to health equity.
+Recognized for her research excellence, Selina has contributed to projects on
+participatory action research with immigrant workers and campus drinking culture,
+bridging academic inquiry with real-world impact.
+
+With a unique blend of clinical and academic expertise, Selina strives to foster culturally
+grounded, community-informed practices that advance mental health care in Canada
+and beyond.
                     </p>
-                    <h3>Professional Life:</h3>
+                    <h3 class="topmargin_0">Ph. D. Thesis:</h3>
                     <p>
-                      Dutem vel eum iriure dolor in hendrerit in vulputate velit
-                      esse molestie consequat, vel illum dolore eu feugiat nulla
-                      facilisis at vero eros et accumsan et iusto odio dignissim
-                      qui blandit. Praesent luptatum zzril delenit augue duis
-                      dolore te feugait nulla facilisi.
+                      Unsettling co-creation with Chinese immigrants: A post-qualitative inquiry on
+mental health and wellness
                     </p>
                   </div>
 
@@ -183,19 +197,12 @@
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="services.html">paper 1</a>
+                        <a href="">Western services for a Chinese-Canadian family with
+                          children with Autism spectrum disorder: Does culture play a role?</a>
                       </li>
                       <li>
-                        <a href="services.html">paper 2</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 3</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 4</a>
-                      </li>
-                      <li>
-                        <a href="services.html">paper 5</a>
+                        <a href="">Participatory Action Research:
+                          A Tool to Develop Occupational Health and Safety Education for New Immigrant Workers.</a>
                       </li>
                     </ul>
                   </div>
@@ -214,7 +221,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/compressed.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
