testing link routes

--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@ class="page_header header_white table_section columns_margin_0 toggle-xs-right" 
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-2 col-md-3 col-sm-5">
-      <a href="/index.html" class="logo logo_image">
-        <img src="/images/logo.png" alt="" />
+      <a href="index.html" class="logo logo_image">
+        <img src="images/logo.png" alt="" />
       </a>
       <span class="toggle_menu visible-xs">
         <span></span>
@@ -17,26 +17,26 @@ class="page_header header_white table_section columns_margin_0 toggle-xs-right" 
       <nav class="mainmenu_wrapper">
         <ul class="mainmenu nav sf-menu">
           <li class="active">
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
 
           <li>
-            <a href="/group_projects.html">Projects</a>
+            <a href="group_projects.html">Projects</a>
           </li>
 
           <li>
-            <a href="/principal_investigators.html">Principal Investigators</a>
+            <a href="principal_investigators.html">Principal Investigators</a>
           </li>
 
           <li>
-            <a href="/lab_members.html">Lab Members</a>
+            <a href="lab_members.html">Lab Members</a>
           </li>
 
           <li>
-            <a href="/publications.html">Publications</a>
+            <a href="publications.html">Publications</a>
           </li>
           <li>
-            <a href="/knowledge_translation.html">Knowledge Translation</a>
+            <a href="knowledge_translation.html">Knowledge Translation</a>
           </li>
         </ul>
       </nav>
