updating publications and links

--- a/members/hsin-hsiu_essential_yeh.html
+++ b/members/hsin-hsiu_essential_yeh.html
@@ -188,25 +188,25 @@ Alberta: Insights from Healthcare Providers in a Qualitative Case Study
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="">Higher Rumination Tendency Is Associated with Reduced Positive
+                        <a href="https://doi.org/10.1155/2022/1409320">Higher Rumination Tendency Is Associated with Reduced Positive
                           Effects of Daily Activity Participation in People with Depressive Disorder.</a>
                       </li>
                       <li>
-                        <a href="">A model for occupation-based
+                        <a href="https://doi.org/10.1080/07380577.2018.1544428">A model for occupation-based
                           palliative care. Occupational Therapy in Health Care.</a>
                       </li>
                       <li>
-                        <a href="">Mediation Effects of Daily Activity Participation between Rumination and
-                          Subjective Quality of Life in Persons with Depression.</a>
+                        Mediation Effects of Daily Activity Participation between Rumination and
+                          Subjective Quality of Life in Persons with Depression.
                       </li>
                       <li>
-                        <a href="">Validation of the Ruminative Response Scale-Chinese Version (RRS-C)
-                          for Persons with Depression in Taiwan.</a>
+                        Validation of the Ruminative Response Scale-Chinese Version (RRS-C)
+                          for Persons with Depression in Taiwan.
                       </li>
                       <li>
-                        <a href="">Teaching evidence-based practice to
+                        Teaching evidence-based practice to
                           occupational therapy students during psychiatry fieldwork: a curriculum at a
-                          University hospital in Taiwan.</a>
+                          University hospital in Taiwan.
                       </li>
                     </ul>
                   </div>
