--- a/members/selina_fan.html
+++ b/members/selina_fan.html
@@ -197,11 +197,11 @@ mental health and wellness
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="">Western services for a Chinese-Canadian family with
+                        <a href="https://doi.org/10.1080/09638288.2023.2227566">Western services for a Chinese-Canadian family with
                           children with Autism spectrum disorder: Does culture play a role?</a>
                       </li>
                       <li>
-                        <a href="">Participatory Action Research:
+                        <a href="https://doi.org/10.1177/14767503241267895">Participatory Action Research:
                           A Tool to Develop Occupational Health and Safety Education for New Immigrant Workers.</a>
                       </li>
                     </ul>
