--- a/members/john_hu.html
+++ b/members/john_hu.html
@@ -175,19 +175,22 @@
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="">Access to health knowledge for health equality: a multi-phase review focused on
+                        <a href="https://doi.org/10.1186/s12939-023-02080-5">Access to health knowledge for health equality: a multi-phase review focused on
                           disability-health.</a>
                       </li>
                       <li>
-                        <a href="">Participatory Action Research:
+                        <a href="https://dx.doi.org/10.21622/ILCC.2023.03.2.174">Participatory Action Research:
                           performative critical consciousness as social ritual.</a>
                       </li>
+                      <a href="https://dx.doi.org/10.13187/jare.2023.1.6">Supporting Youth Access to Research Dissemination through Digital Media:
+                        Analysis of Mental Health Impacts.</a>
+                    </li>
                       <li>
-                        <a href="">Digital Humanities as Inclusive Knowledge Translation: A Multi-Phase Qualitative
+                        <a href="https://doi.org/10.47540/ijqr.v3i1.850">Digital Humanities as Inclusive Knowledge Translation: A Multi-Phase Qualitative
                           Pilot Study.</a>
                       </li>
                       <li>
-                        <a href="">Inequalities in travel time, cost, risk as cause of persistent social and health
+                        <a href="https://doi.org/10.22037/sdh.v9i1.41754">Inequalities in travel time, cost, risk as cause of persistent social and health
                           inequalities.</a>
                       </li>
                     </ul>
