Fixing linking issue

--- a/footer.html
+++ b/footer.html
@@ -43,22 +43,22 @@ class="page_footer ds ms section_padding_top_100 section_padding_bottom_100"
         <h3 class="widget-title">Navigation</h3>
         <ul class="menu">
           <li class="">
-            <a href="index.html">Home</a>
+            <a href="/index.html">Home</a>
           </li>
           <li class="">
-            <a href="group_projects.html">Projects</a>
+            <a href="/group_projects.html">Projects</a>
           </li>
           <li class="">
-            <a href="principal_investigators.html">Principal Investigators</a>
+            <a href="/principal_investigators.html">Principal Investigators</a>
           </li>
           <li class="">
-            <a href="lab_members.html">Lab Members</a>
+            <a href="/lab_members.html">Lab Members</a>
           </li>
           <li class="">
-            <a href="publications.html">Publications</a>
+            <a href="/publications.html">Publications</a>
           </li>
           <li class="">
-            <a href="knowledge_translation.html">Knowledge Translation</a>
+            <a href="/knowledge_translation.html">Knowledge Translation</a>
           </li>
         </ul>
       </div>
