--- a/lab_members.html
+++ b/lab_members.html
@@ -125,15 +125,13 @@
                       <img src="images/team/Hsin-Hsiu-Yeh.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="/members/hsin-hsiu_essential_yeh.html">Hsin-Hsiu Essential Yeh</a>
+                          <a href="members/hsin-hsiu_essential_yeh.html">Hsin-Hsiu Essential Yeh</a>
                         </h3>
                         <p>
-                          Graduate Research Assistant, Rehabilitation Research
-                          Center, University of Alberta Ph.D. Candidate in
-                          Rehabilitation Medicine, University of Alberta
+                          Ph.D. Candidate, University of Alberta
                         </p>
                         <div class="item-button darklinks">
-                          <a href="/members/hsin-hsiu_essential_yeh.html" class="small-text">About</a>
+                          <a href="members/hsin-hsiu_essential_yeh.html" class="small-text">About</a>
                         </div>
                       </div>
                     </div>
@@ -144,14 +142,13 @@
                       <img src="images/team/02.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="/members/fatema_akbar.html">Fatema Akbar</a>
+                          <a href="members/fatema_akbar.html">Fatema Akbar</a>
                         </h3>
                         <p>
-                          Ph. D. Student, Rehabilitation Research
-                          Center, University of Alberta
+                          Ph. D. Student,  University of Alberta
                         </p>
                         <div class="item-button darklinks">
-                          <a href="/members/fatema_akbar.html" class="small-text">About</a>
+                          <a href="members/fatema_akbar.html" class="small-text">About</a>
                         </div>
                       </div>
                     </div>
@@ -164,11 +161,11 @@
                       <img src="images/team/Selina-Fan-3.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="/members/selina_fan.html">Selina Fan</a>
+                          <a href="members/selina_fan.html">Selina Fan</a>
                         </h3>
                         <p>Ph.D student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="/members/selina_fan.html" class="small-text">About</a>
+                          <a href="members/selina_fan.html" class="small-text">About</a>
                         </div>
                       </div>
                     </div>
@@ -181,11 +178,11 @@
                       <img src="images/team/05.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="/members/john_hu.html">John Hu</a>
+                          <a href="members/john_hu.html">John Hu</a>
                         </h3>
                         <p>Ph.D Candidate, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="/members/john_hu.html" class="small-text">About</a>
+                          <a href="members/john_hu.html" class="small-text">About</a>
                         </div>
                       </div>
                     </div>
@@ -216,13 +213,13 @@
                       <img src="images/team/03.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="/members/priya_kar.html">Priya Kar</a>
+                          <a href="members/priya_kar.html">Priya Kar</a>
                         </h3>
                         <p>
                           Masters Student, University of Alberta
                         </p>
                         <div class="item-button darklinks">
-                          <a href="/members/priya_kar.html" class="small-text">About</a>
+                          <a href="members/priya_kar.html" class="small-text">About</a>
                         </div>
                       </div>
                     </div>
@@ -233,13 +230,13 @@
                       <img src="images/team/02.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="/members/rosanna_wegner.html">Rosanna Wegner</a>
+                          <a href="members/rosanna_wegner.html">Rosanna Wegner</a>
                         </h3>
                         <p>
                           Masters Student,  University of Alberta
                         </p>
                         <div class="item-button darklinks">
-                          <a href="/members/rosanna_wegner.html" class="small-text">About</a>
+                          <a href="members/rosanna_wegner.html" class="small-text">About</a>
                         </div>
                       </div>
                     </div>
@@ -252,11 +249,11 @@
                       <img src="images/team/Amir Shamsi Ardekani.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="/members/amir_shamsi_ardekani.html">Amir Shamsi Ardekani</a>
+                          <a href="members/amir_shamsi_ardekani.html">Amir Shamsi Ardekani</a>
                         </h3>
                         <p>Masters student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="/members/amir_shamsi_ardekani.html" class="small-text">About</a>
+                          <a href="members/amir_shamsi_ardekani.html" class="small-text">About</a>
                         </div>
                       </div>
                     </div>
