--- a/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html
+++ b/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html
@@ -17,11 +17,11 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/animations.css">
-	<link rel="stylesheet" href="/css/fonts.css">
-	<link rel="stylesheet" href="/css/main.css" id="color-switcher-link">
-	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+	<link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/animations.css">
+	<link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/fonts.css">
+	<link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/main.css" id="color-switcher-link">
+	<script src="https://github.com/Psyclin/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
 	<!--[if lt IE 9]>
 		<script src="js/vendor/html5shiv.min.js"></script>
@@ -97,7 +97,7 @@
 						<div class="col-md-10 col-md-push-1 text-center">
 							<div class="vertical-item gallery-extended-item content-padding with_background rounded">
 								<div class="item-media">
-									<img id="picture" src="images/gallery/03.jpg" alt="">
+									<img id="picture" src="https://github.com/Psyclin/PineLabs/images/gallery/03.jpg" alt="">
 								</div>
 								<div class="item-content text-center">
 
@@ -127,8 +127,8 @@ settlement organizations
 	</div>
 	<!-- eof #canvas -->
 
-	<script src="/js/compressed.js"></script>
-	<script src="/js/main.js"></script>
+	<script src="https://github.com/Psyclin/PineLabs/js/compressed.js"></script>
+	<script src="https://github.com/Psyclin/PineLabs/js/main.js"></script>
 
 
 </body>
