testing linking issue

--- a/header.html
+++ b/header.html
@@ -25,18 +25,18 @@ class="page_header header_white table_section columns_margin_0 toggle-xs-right" 
           </li>
 
           <li>
-            <a href="https://psyclin.github.io/PineLabs//principal_investigators.html">Principal Investigators</a>
+            <a href="https://psyclin.github.io/PineLabs/principal_investigators.html">Principal Investigators</a>
           </li>
 
           <li>
-            <a href="https://psyclin.github.io/PineLabs//lab_members.html">Lab Members</a>
+            <a href="https://psyclin.github.io/PineLabs/lab_members.html">Lab Members</a>
           </li>
 
           <li>
-            <a href="https://psyclin.github.io/PineLabs//publications.html">Publications</a>
+            <a href="https://psyclin.github.io/PineLabs/publications.html">Publications</a>
           </li>
           <li>
-            <a href="https://psyclin.github.io/PineLabs//knowledge_translation.html">Knowledge Translation</a>
+            <a href="https://psyclin.github.io/PineLabs/knowledge_translation.html">Knowledge Translation</a>
           </li>
         </ul>
       </nav>
