--- a/members/amir_shamsi_ardekani.html
+++ b/members/amir_shamsi_ardekani.html
@@ -121,7 +121,7 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://github.com/Psyclin/PineLabs/images/team/Amir Shamsi Ardekani.jpg" alt="" class="round" />
+                  <img src="https://psyclin.github.io/PineLabs/images/team/Amir Shamsi Ardekani.jpg" alt="" class="round" />
                   <h2 class="bottommargin_0">Amir Shamsi Ardekani</h2>
                   <p class="small-text">Masters Student</p>
                 </div>
