--- a/members/priya_kar.html
+++ b/members/priya_kar.html
@@ -17,11 +17,11 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/main.css" id="color-switcher-link" />
-    <script src="https://github.com/Psyclin/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -121,7 +121,7 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://github.com/Psyclin/PineLabs/images/team/03.jpg" alt="" class="round" />
+                  <img src="https://psyclin.github.io/PineLabs/images/team/03.jpg" alt="" class="round" />
                   <h2 class="bottommargin_0">Priya Kar</h2>
                   <p class="small-text">Masters Student</p>
                 </div>
@@ -192,7 +192,7 @@ University-Aged Men
     </div>
     <!-- eof #canvas -->
 
-    <script src="https://github.com/Psyclin/PineLabs/js/compressed.js"></script>
-    <script src="https://github.com/Psyclin/PineLabs/js/main.js"></script>
+    <script src="https://psyclin.github.io/PineLabs/js/compressed.js"></script>
+    <script src="https://psyclin.github.io/PineLabs/js/main.js"></script>
   </body>
 </html>
