--- a/members/selina_fan.html
+++ b/members/selina_fan.html
@@ -16,12 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://github.com/Psyclin/PineLabs/css/main.css" id="color-switcher-link" />
-    <script src="https://github.com/Psyclin/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
+    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -121,7 +120,7 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://github.com/Psyclin/PineLabs/images/team/Selina-Fan-3.jpg" alt="" class="round" />
+                  <img src="https://psyclin.github.io/PineLabs/images/team/Selina-Fan-3.jpg" alt="" class="round" />
                   <h2 class="bottommargin_0">Selina Fan</h2>
                   <p class="small-text">PH.D. Candidate</p>
                 </div>
@@ -221,7 +220,7 @@ mental health and wellness
     </div>
     <!-- eof #canvas -->
 
-    <script src="https://github.com/Psyclin/PineLabs/js/compressed.js"></script>
-    <script src="https://github.com/Psyclin/PineLabs/js/main.js"></script>
+    <script src="https://psyclin.github.io/PineLabs/js/compressed.js"></script>
+    <script src="https://psyclin.github.io/PineLabs/js/main.js"></script>
   </body>
 </html>
